Removed unused equation numbers through page 20

--- a/paper/sections/appendix-bounds.tex
+++ b/paper/sections/appendix-bounds.tex
@@ -420,11 +420,11 @@ and vice versa, we again have~\eqref{eq:equiv-analogous-optimal}
 as a consequence of~\eqref{eq:equiv-diff}.
 
 We can now finally combine~\eqref{eqref:equiv-ineq}
-and~\eqref{eq:equiv-analogous-optimal} to obtain
+and~\eqref{eq:equiv-analogous-optimal} to obtain the desired inequality~\eqref{eq:equivalent}:
 \begin{align}
 \min_{\RL' \in \StartsWith(\Prefix)} \Obj(\RL', \x, \y)
 = \Obj(\RL^*, \x, \y) \le \Obj(\RLB^*, \x, \y)
-= \min_{\RLB' \in \StartsWith(\PrefixB)} \Obj(\RLB', \x, \y).
+= \min_{\RLB' \in \StartsWith(\PrefixB)} \Obj(\RLB', \x, \y). \nn
 \end{align}
 
 \section{Proof of Theorem~\ref{thm:similar} (Similar support bound)}
