--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -20,7 +20,7 @@ which includes the penalty for longer prefixes,
 &= \Loss_p(\Prefix', \Labels', \x, \y) + \Reg K + \Reg (K' - K) \nn \\
 &= b(\Prefix, \x, \y) + \Reg (K' - K)
 \ge b(\Prefix, \x, \y) + \Reg \ge \CurrentObj.
-\label{eq:lookahead}
+%\label{eq:lookahead}
 \end{align}
 \end{proof}
 \end{arxiv}
@@ -119,7 +119,7 @@ For an optimal rule list~$\OptimalRL$ with objective~$\OptimalObj$,
 \begin{align}
 \Reg L(\OptimalRL) \le \OptimalObj = \Obj(\OptimalRL, \x, \y)
 = \Loss(\OptimalRL, \x, \y) + \Reg L(\OptimalRL)
-\le \CurrentObj.
+\le \CurrentObj. \nn
 \end{align}
 The maximum possible length for~$\OptimalRL$ occurs
 when~$\Loss(\OptimalRL, \x, \y)$ is minimized;
@@ -133,7 +133,7 @@ If the current best rule list~$\CurrentRL$ has zero
 misclassification error, then
 \begin{align}
 \Reg K^* \leq \Loss(\OptimalRL, \x, \y) + \Reg K^* = \Obj(\OptimalRL, \x, \y)
-\le \CurrentObj = \Obj(\CurrentRL, \x, \y) = \Reg K,
+\le \CurrentObj = \Obj(\CurrentRL, \x, \y) = \Reg K, \nn
 \end{align}
 and thus ${K^* \leq K}$.
 %
@@ -142,7 +142,7 @@ If the current best rule list is suboptimal,
 %
 \begin{align}
 \Reg K^* \leq \Loss(\OptimalRL, \x, \y) + \Reg K^* = \Obj(\OptimalRL, \x, \y)
-< \CurrentObj = \Obj(\CurrentRL, \x, \y) = \Reg K,
+< \CurrentObj = \Obj(\CurrentRL, \x, \y) = \Reg K, \nn
 \end{align}
 in which case ${K^* < K}$, \ie ${K^* \leq K-1}$, since $K$ is an integer.
 \end{proof}
@@ -223,7 +223,7 @@ Now recall from~\eqref{eq:prefix-lb} that
 %
 \begin{align}
 b(\Prefix, \x, \y) = \Loss_p(\Prefix, \Labels, \x, \y) + \Reg K
-\le \Loss_p(\Prefix', \Labels', \x, \y) + \Reg K' = b(\Prefix', \x, \y),
+\le \Loss_p(\Prefix', \Labels', \x, \y) + \Reg K' = b(\Prefix', \x, \y), \nn
 \end{align}
 %
 and from~\eqref{eq:prefix-loss} that
@@ -310,7 +310,7 @@ execution progress that we display to the user.
 \end{arxiv}
 
 \begin{arxiv}
-\begin{theorem}[Fine-grained upper bound on remaining prefix evaluations]%~~~
+\begin{theorem}[Fine-grained upper bound on remaining prefix evaluations]~
 \end{arxiv}
 \begin{kdd}
 \begin{theorem}[Upper bound on the number of remaining prefix evaluations]
@@ -328,20 +328,21 @@ prefix evaluations, then
 \begin{align}
 \Remaining(\CurrentObj, \Queue)
 \le \sum_{\Prefix \in Q} \sum_{k=0}^{f(\Prefix)} \frac{(M - L(\Prefix))!}{(M - L(\Prefix) - k)!},
+\label{eq:remaining}
 \end{align}
 \begin{arxiv}
 where
 \begin{align}
 f(\Prefix) = \min \left( \left\lfloor
-  \frac{\CurrentObj - b(\Prefix, \x, \y)}{\Reg} \right\rfloor, M - L(\Prefix)\right).
-\label{eq:f}
+  \frac{\CurrentObj - b(\Prefix, \x, \y)}{\Reg} \right\rfloor, M - L(\Prefix)\right). \nn
+%\label{eq:f}
 \end{align}
 \end{arxiv}
 \begin{kdd}
 \begin{align}
 \text{where} \quad f(\Prefix) = \min \left( \left\lfloor
   \frac{\CurrentObj - b(\Prefix, \x, \y)}{\Reg} \right\rfloor, M - L(\Prefix)\right).
-\label{eq:f}
+%\label{eq:f}
 \end{align}
 \end{kdd}
 \end{theorem}
@@ -355,14 +356,14 @@ gives an upper bound on the length of any prefix~$\Prefix'$
 that starts with~$\Prefix$:
 \begin{align}
 L(\Prefix') \le \min \left( L(\Prefix) + \left\lfloor \frac{\CurrentObj - b(\Prefix, \x, \y)}{\Reg} \right\rfloor, M \right)
-\equiv U(\Prefix).
+\equiv U(\Prefix). \nn
 \end{align}
 This gives an upper bound on the number of remaining prefix evaluations:
 \begin{arxiv}
 \begin{align}
 \Remaining(\CurrentObj, \Queue)
 \le \sum_{\Prefix \in Q} \sum_{k=0}^{U(\Prefix) - L(\Prefix)} P(M - L(\Prefix), k)
-= \sum_{\Prefix \in Q} \sum_{k=0}^{f(\Prefix)} \frac{(M - L(\Prefix))!}{(M - L(\Prefix) - k)!}\,,
+= \sum_{\Prefix \in Q} \sum_{k=0}^{f(\Prefix)} \frac{(M - L(\Prefix))!}{(M - L(\Prefix) - k)!}\,, \nn
 \end{align}
 where~$P(m, k)$ denotes the number of $k$-permutations of~$m$.
 \end{arxiv}
@@ -404,8 +405,8 @@ all rule lists formed from a set~$\RuleSet$ of~$M$ rules.
 For any set~$\RuleSet$ of $M$ rules,
 \begin{arxiv}
 \begin{align}
-\TotalRemaining(\RuleSet) \le \sum_{k=0}^K \frac{M!}{(M - k)!},
-\label{eq:size-naive}
+\TotalRemaining(\RuleSet) \le \sum_{k=0}^K \frac{M!}{(M - k)!}, \nn
+%\label{eq:size-naive}
 \end{align}
 where ${K = \min(\lfloor 1/2 \Reg \rfloor, M)}$.
 \end{arxiv}
@@ -429,7 +430,7 @@ selection and permutation of~$k$ out of~$M$ rules,
 over all~${k \le K}$,
 \begin{align}
 \TotalRemaining(\RuleSet) \le 1 + \sum_{k=1}^K P(M, k)
-= \sum_{k=0}^K \frac{M!}{(M - k)!}.
+= \sum_{k=0}^K \frac{M!}{(M - k)!}. \nn
 \end{align}
 \end{arxiv}
 \begin{kdd}
@@ -471,7 +472,7 @@ and let~$L(\Prefix)$ be the length of prefix~$\Prefix$.
 %
 Let~$\Queue_j$ be the number of prefixes of length~$j$ in~$\Queue$,
 \begin{align}
-\Queue_j = \big | \{ \Prefix : L(\Prefix) = j, \Prefix \in \Queue \} \big |
+\Queue_j = \big | \{ \Prefix : L(\Prefix) = j, \Prefix \in \Queue \} \big | \nn
 \end{align}
 and let~${J = \argmax_{\Prefix \in \Queue} L(\Prefix)}$
 be the length of the longest prefix in~$\Queue$.
@@ -480,7 +481,7 @@ Define~${\Remaining(\CurrentObj, \Queue)}$ to be the number of remaining
 prefix evaluations, then
 \begin{align}
 \Remaining(\CurrentObj, \Queue)
-\le \sum_{j=1}^J \Queue_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right),
+\le \sum_{j=1}^J \Queue_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right), \nn
 \end{align}
 where~${K = \min(\lfloor \CurrentObj / \Reg \rfloor, M)}$.
 \end{proposition}
@@ -498,7 +499,7 @@ For any prefix~$\Prefix$ in queue~$\Queue$ with length~${L(\Prefix) = j}$,
 the maximum number of prefixes that start with~$\Prefix$
 and remain to be evaluated is:
 \begin{align}
-\sum_{k=0}^{K-j} P(M-j, k) = \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!},
+\sum_{k=0}^{K-j} P(M-j, k) = \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!}, \nn
 \end{align}
 where~${P(T, k)}$ denotes the number of $k$-permutations of~$T$.
 %
@@ -506,7 +507,7 @@ This gives an upper bound on the number of remaining prefix evaluations:
 \begin{align}
 \Remaining(\CurrentObj, \Queue)
 \le \sum_{j=0}^J \Queue_j \left( \sum_{k=0}^{K-j} P(M-j, k) \right)
-= \sum_{j=0}^J \Queue_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right).
+= \sum_{j=0}^J \Queue_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right). \nn
 \end{align}
 \end{proof}
 \end{arxiv}
@@ -652,7 +653,7 @@ Now, let us define~$\Loss_i$ to be the portion of~$\OptimalObj$
 due to this rule's misclassification error,
 \begin{align}
 \Loss_i \equiv \frac{1}{N} \sum_{n=1}^N
-  \Cap(x_n, p_i \given \Prefix) \wedge \one [ q_i \neq y_n ].
+  \Cap(x_n, p_i \given \Prefix) \wedge \one [ q_i \neq y_n ]. \nn
 \end{align}
 The largest discrepancy between~$\OptimalRL$ and~$\RL$ would
 occur if~$\RL$ misclassified all the data captured by~$p_i$.
@@ -666,7 +667,7 @@ the misclassification error of~$\RL$ and~$\OptimalRL$:
   - \frac{1}{N} \sum_{n=1}^N
   \Cap(x_n, p_i \given \Prefix) \wedge \one [ q_i \neq y_n ] \nn \\
 &= \frac{1}{N} \sum_{n=1}^N
-  \Cap(x_n, p_i \given \Prefix) \wedge \one [ q_i = y_n ] = a_i,
+  \Cap(x_n, p_i \given \Prefix) \wedge \one [ q_i = y_n ] = a_i, \nn
 \end{align}
 where we defined~$a_i$ in~\eqref{eq:rule-correct}.
 %
@@ -866,9 +867,9 @@ set of antecedents in ${\Prefix^{K} = (p_1, \dots, p_{K})}$:
   \wedge \Cap(x_n, p_K) \nn \\
 &= \frac{1}{N} \sum_{n=1}^N \left( \bigwedge_{k=1}^{K-1} \neg\, \Cap(x_n, p_k) \right)
   \wedge \Cap(x_n, p_K)
-< \Reg. \nn
+< \Reg, \nn
 \end{align}
-Similarly, the support of~$P_{K'}$ in~$\PrefixB$ depends only on
+and the support of~$P_{K'}$ in~$\PrefixB$ depends only on
 the set of antecedents in ${\PrefixB^{K'} =}$ ${(P_1, \dots, P_{K'})}$:
 \begin{align}
 \Supp(P_{K'}, \x \given \PrefixB)
@@ -880,8 +881,8 @@ the set of antecedents in ${\PrefixB^{K'} =}$ ${(P_1, \dots, P_{K'})}$:
 &\le \frac{1}{N} \sum_{n=1}^N \left( \bigwedge_{k=1}^{K-1} \neg\, \Cap(x_n, p_k) \right)
   \wedge \Cap(x_n, P_{K'}) \nn \\
 &= \frac{1}{N} \sum_{n=1}^N \left( \bigwedge_{k=1}^{K-1} \neg\, \Cap(x_n, p_k) \right)
-  \wedge \Cap(x_n, p_{K})
-= \Supp(p_K, \x \given \Prefix) < \Reg. \nn
+  \wedge \Cap(x_n, p_{K}) \nn \\
+&= \Supp(p_K, \x \given \Prefix) < \Reg.
 \label{ineq:supp}
 \end{align}
 The first inequality reflects the condition that
@@ -910,7 +911,7 @@ the last antecedent~$p_{K}$ has insufficient accurate support,
 \ie the opposite of the bound in~\eqref{eq:min-capture-correct}:
 \begin{align}
 \frac{1}{N} \sum_{n=1}^N \Cap(x_n, p_K \given \Prefix) \wedge \one [ q_K = y_n ]
-< \Reg.
+< \Reg. \nn
 \end{align}
 %
 Let ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$
@@ -938,7 +939,7 @@ The accurate support of~$P_{K'}$ in~$\PrefixB$ is insufficient:
    \wedge \Cap(x_n, p_K) \wedge \one [ Q_{K'} = y_n ] \nn \\
 &= \frac{1}{N} \sum_{n=1}^N \Cap(x_n, p_K \given \Prefix) \wedge \one [ Q_{K'} = y_n ] \nn \\
 &\le \frac{1}{N} \sum_{n=1}^N \Cap(x_n, p_K \given \Prefix) \wedge \one [ q_{K} = y_n ]
-< \Reg.
+< \Reg. \nn
 \end{align}
 The first inequality reflects the condition that
 ${\PrefixB^{K'-1} \in \StartContains(\Prefix^{K-1})}$,
@@ -998,7 +999,7 @@ and let ${\RLB = (\PrefixB, \LabelsB, \DefaultB, \kappa)}$
 be a rule list with prefix ${\PrefixB = (P_1, \dots, P_{\kappa})}$,
 such that~$\Prefix$ and~$\PrefixB$ capture the same data,~\ie
 \begin{align}
-\{x_n : \Cap(x_n, \Prefix)\} = \{x_n : \Cap(x_n, \PrefixB)\}.
+\{x_n : \Cap(x_n, \Prefix)\} = \{x_n : \Cap(x_n, \PrefixB)\}. \nn
 \end{align}
 %
 If the objective lower bounds of~$\RL$ and~$\RLB$
@@ -1008,7 +1009,7 @@ lower bound on the objective of the optimal rule list in~$\StartsWith(\PrefixB)$
 \begin{align}
 \min_{\RL' \in \StartsWith(\Prefix)} \Obj(\RL', \x, \y)
 \le \min_{\RLB' \in \StartsWith(\PrefixB)} \Obj(\RLB', \x, \y).
-\label{eq:permutation}
+\label{eq:equivalent}
 \end{align}
 \end{theorem}
 
@@ -1089,7 +1090,7 @@ lower bound on the objective of the optimal rule list in~$\StartsWith(\PrefixB)$
 \begin{align}
 \min_{\RL' \in \StartsWith(\Prefix)} \Obj(\RL', \x, \y)
 \le \min_{\RLB' \in \StartsWith(\PrefixB)} \Obj(\RLB', \x, \y).
-\label{eq:permutation}
+%\label{eq:permutation}
 \end{align}
 \end{corollary}
 
