Add space between sparsity figs
https://tex.stackexchange.com/questions/200414/add-space-between-two-images

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -213,6 +213,8 @@ to those found via other algorithms.
 % left lower right upper
 \includegraphics[trim={12mm, 0mm, 24mm, 5mm},
 width=0.93\textwidth]{figs/compas-sparsity-training.pdf}
+\vspace{6mm}
+
 \includegraphics[trim={12mm, 0mm, 24mm, 0mm},
 width=0.93\textwidth]{figs/frisk-sparsity-training-c45.pdf}
 \end{center}
