--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -345,8 +345,11 @@ We present additional theorems and all proofs in~\citep{AngelinoLaAlSeRu17}.
 \subsection{Hierarchical objective lower bound}
 \label{sec:hierarchical}
 
-We can decompose the misclassification error into two contributions
-corresponding to the prefix and the default rule:
+We can decompose the misclassification error
+\begin{arxiv}
+in~\eqref{eq:objective}
+\end{arxiv}
+into two contributions corresponding to the prefix and the default rule:
 \begin{align*}
 \Loss(\RL, \x, \y) %= \Loss(\Prefix, r_q, \Default, \x, \y)
 \equiv \Loss_p(\Prefix, \Labels, \x, \y) + \Loss_0(\Prefix, \Default, \x, \y),
