--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -287,7 +287,7 @@ when the lower bound matches the objective value.
 %
 The lower panels in Figure~\ref{fig:weapon-reg-execution} plot corresponding traces of
 an upper bound on the size of the remaining search space (Theorem~\ref{thm:remaining-eval-fine}),
-and illustrate that as~$\Reg$ decreases, it becomes more difficult to eliminate regions of the search space.
+and illustrate that as~$\Reg$ decreases, it becomes more difficult to eliminate regions of the search~space.
 
 Figure~\ref{fig:queue-weapon-reg} visualizes the elements in CORELS's logical queue,
 for each of the executions in Figure~\ref{fig:weapon-reg-execution}.
@@ -513,12 +513,18 @@ Per-component performance improvement (NYCLU stop-and-frisk dataset) \\
 & Total & Slow- & Time to & Max evaluated~ \\
 Algorithm variant & time (min) & down & optimum ($\mu$s) & prefix length \\
 \hline
-CORELS & 0.8 (0.1) & --- & 6.9 (0.2) & 11 \\
-No priority queue (BFS) & 2.4 (0.2) & 3.0$\times$ & 26 (0.6) & 11 \\
-No support bounds & 1.5 (0.1) & 1.9$\times$ & 11 (0.3) & 11-12 \\
-No lookahead bound & 1.3 (0.1) & 1.6$\times$ & 6.9 (0.3) & 11-12 \\
-No symmetry-aware map & 610 (100) & 770$\times$ & 6.7 (0.1) & 11 \\
-No equivalent points bound & 2.4 (0.5) & 3.0$\times$ & 6.4 (0.4) & 13 \\
+%CORELS & 0.8 (0.1) & --- & 6.9 (0.2) & 11 \\
+%No priority queue (BFS) & 2.4 (0.2) & 3.0$\times$ & 26 (0.6) & 11 \\
+%No support bounds & 1.5 (0.1) & 1.9$\times$ & 11 (0.3) & 11-12 \\
+%No lookahead bound & 1.3 (0.1) & 1.6$\times$ & 6.9 (0.3) & 11-12 \\
+%No symmetry-aware map & 610 (100) & 770$\times$ & 6.7 (0.1) & 11 \\
+%No equivalent points bound & 2.4 (0.5) & 3.0$\times$ & 6.4 (0.4) & 13 \\
+CORELS & 0.7 (0.1) & --- & 6.7 (0.1) & 11 \\
+No priority queue (BFS) & 1.5 (0.1) & 2.0$\times$ & 60 (20) & 11 \\
+No support bounds & 1.4 (0.1) & 1.9$\times$ & 10 (0.1) & 11-12 \\
+No lookahead bound & 1.2 (0.1) & 1.6$\times$ & 6.9 (0.3) & 11-12 \\
+No symmetry-aware map & 620 (100) & 850$\times$ & 6.6 (0.1) & 11 \\
+No equivalent points bound & 2.4 (0.1) & 3.4$\times$ & 6.0 (0.4) & 13 \\
 \hline
 \end{tabular}
 \begin{tabular}{l | c | c | c}
@@ -526,12 +532,18 @@ No equivalent points bound & 2.4 (0.5) & 3.0$\times$ & 6.4 (0.4) & 13 \\
  & Lower bound & Total queue &  Max queue \\
 Algorithm variant & evaluations ($\times 10^6$) & insertions ($\times 10^5$) & size ($\times 10^5$) \\
 \hline
-CORELS & 6.5 (0.5) & 1.7 (0.1) & 1.1 (0.1) \\
-No priority queue (BFS) & 20 (1.7) & 5.4 (0.5) & 2.0 (0.1) \\
-No support bounds & 12 (1.0) & 3.1 (0.3) & 1.9 (0.1) \\
-No lookahead bound & 10 (0.7) & 2.8 (0.2) & 1.8 (0.1) \\
-No symmetry-aware map & 5200 (850) & 1400 (240) & 1100 (180) \\
-No equivalent points bound & 25 (5.4) & 7.5 (0.5) & 4.6 (0.2) \\
+%CORELS & 6.5 (0.5) & 1.7 (0.1) & 1.1 (0.1) \\
+%No priority queue (BFS) & 20 (1.7) & 5.4 (0.5) & 2.0 (0.1) \\
+%No support bounds & 12 (1.0) & 3.1 (0.3) & 1.9 (0.1) \\
+%No lookahead bound & 10 (0.7) & 2.8 (0.2) & 1.8 (0.1) \\
+%No symmetry-aware map & 5200 (850) & 1400 (240) & 1100 (180) \\
+%No equivalent points bound & 25 (5.4) & 7.5 (0.5) & 4.6 (0.2) \\
+CORELS & 6.0 (0.5) & 1.7 (0.1) & 1.0 (0.1) \\
+No priority queue (BFS) & 12.3 (1.0) & 3.6 (0.3) & 1.3 (0.1) \\
+No support bounds & 11 (1) & 3.1 (0.3) & 1.8 (0.1) \\
+No lookahead bound & 9.6 (0.7) & 2.8 (0.2) & 1.7 (0.1) \\
+No symmetry-aware map & 5200 (800) & 1400 (200) & 1100 (200) \\
+No equivalent points bound & 26 (1) & 7.5 (0.4) & 4.5 (0.2) \\
 \end{tabular}
 %\vspace{4mm}
 \caption{Per-component performance improvement, as in Table~\ref{tab:ablation},
