--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -458,12 +458,18 @@ Per-component performance improvement (ProPublica dataset) \\
 & Total & Slow- & Time to & Max evaluated~ \\
 Algorithm variant & time (min) & down & optimum (s) & prefix length \\
 \hline
-CORELS & 5.5 (1.6) & --- & 8 (2) & 5-6 \\
-No priority queue (BFS) & 6.8 (2.2) & 1.2$\times$ & 4 (1) & 5-6 \\
-No support bounds & 10 (3.4) & 1.8$\times$ & 13 (4) & 5-6 \\
-No lookahead bound & 72 (23) & 13$\times$ & 9 (2) & 6-7 \\
-No symmetry-aware map & 59 (23) & 10$\times$ & 23 (6) & 5-6 \\
-No equivalent points bound & $>$190 (100) & $>$39$\times$ & $>$7100~* & $\ge$10 \\
+%CORELS & 5.5 (1.6) & --- & 8 (2) & 5-6 \\
+%No priority queue (BFS) & 6.8 (2.2) & 1.2$\times$ & 4 (1) & 5-6 \\
+%No support bounds & 10 (3.4) & 1.8$\times$ & 13 (4) & 5-6 \\
+%No lookahead bound & 72 (23) & 13$\times$ & 9 (2) & 6-7 \\
+%No symmetry-aware map & 59 (23) & 10$\times$ & 23 (6) & 5-6 \\
+%No equivalent points bound & $>$190 (100) & $>$39$\times$ & $>$7100~* & $\ge$10 \\
+CORELS & 4.9 (1.5) & --- & 7 (2) & 5-6 \\
+No priority queue (BFS) & 5.3 (1.6) & 1.1$\times$ & 29 (13) & 5-6 \\
+No support bounds & 8.8 (3.0) & 1.8$\times$ & 11 (3) & 5-6 \\
+No lookahead bound & 65 (21) & 13$\times$ & 8 (2) & 6-7 \\
+No symmetry-aware map & 59 (23) & 11$\times$ & 22 (6) & 5-6 \\
+No equivalent points bound & $>$87 & $>$12$\times$ & $>$3400~* & $\ge$10 \\
 \hline
 \end{tabular}
 \begin{tabular}{l | c | c | c}
@@ -471,12 +477,18 @@ No equivalent points bound & $>$190 (100) & $>$39$\times$ & $>$7100~* & $\ge$10 
  & Lower bound & Total queue &  Max queue \\
 Algorithm variant & evaluations ($\times 10^6$) & insertions ($\times 10^6$) & size ($\times 10^6$) \\
 \hline
-CORELS & 180 (54) & 1.7 (0.4) & 1.3 (0.4) \\
-No priority queue (BFS) & 230 (75) & 1.9 (0.6) & 1.5 (0.5) \\
-No support bounds & 360 (120) & 2.7 (0.8) & 2.2 (0.7) \\
-No lookahead bound & 2200 (710) & 19 (5.9) & 16 (5.3) \\
-No symmetry-aware map & 2000 (770) & 16 (5.9) & 15 (5.7) \\
-No equivalent points bound & $>$1490 & $>$800 & $>$790 \\
+%CORELS & 180 (54) & 1.7 (0.4) & 1.3 (0.4) \\
+%No priority queue (BFS) & 230 (75) & 1.9 (0.6) & 1.5 (0.5) \\
+%No support bounds & 360 (120) & 2.7 (0.8) & 2.2 (0.7) \\
+%No lookahead bound & 2200 (710) & 19 (5.9) & 16 (5.3) \\
+%No symmetry-aware map & 2000 (770) & 16 (5.9) & 15 (5.7) \\
+%No equivalent points bound & $>$1490 & $>$800 & $>$790 \\
+CORELS & 160 (40) & 1.7 (0.4) & 1.2 (0.4) \\
+No priority queue (BFS) & 180 (50) & 3.1 (0.9) & 2.0 (0.7) \\
+No support bounds & 310 (100) & 2.7 (0.8) & 1.9 (0.6) \\
+No lookahead bound & 2200 (700) & 19 (6) & 16 (5) \\
+No symmetry-aware map & 2000 (800) & 16 (6) & 15 (6) \\
+No equivalent points bound & $>$1800 & $>$1000 & $>$990 \\
 \end{tabular}
 %\vspace{4mm}
 \caption{Per-component performance improvement, for the ProPublica dataset
@@ -495,8 +507,8 @@ that each remove a specific implementation optimization or bound.
 %
 All rows represent complete executions, except for the final row,
 in which each execution was terminated due to memory constraints,
-once the size of the cache reached ${8 \times 10^8}$ elements,
-after consuming 390-410GB RAM.
+once the size of the cache reached ${10^9}$ elements,
+after consuming $\sim$350GB RAM.
 %
 In all but the final row and column, we report means
 (and standard deviations) over 10 cross-validation folds.
@@ -510,7 +522,7 @@ in the remaining fields, we report minimum values across folds.
 %
 See also Figure~\ref{fig:queue}. \\
 %
-*~Only 4 out of 10 folds achieve the optimum before being terminated.
+*~Only 7 out of 10 folds achieve the optimum before being terminated.
 }
 \vspace{4mm}
 \label{tab:ablation}
