--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -300,26 +300,27 @@ As an execution progresses, longer prefixes are placed in the queue;
 as~$\Reg$ decreases, the algorithm must spend more time evaluating longer and longer prefixes.
 
 \begin{table}[t!]
-\begin{centering}
+\centering
+%\begin{centering}
 CORELS with different regularization parameters (NYCLU stop-and-frisk dataset) \\
-\end{centering}
+%\end{centering}
 \vspace{2mm}
 \begin{tabular}{l | c | c | c | c}
 & Total & Time to & Max evaluated & Optimal \\
 $\lambda$ & time (s) & optimum (s) & prefix length & prefix length \\
 \hline
-0.04 & 0.36 (0.02) & 0.002 (0.00004) & 6 & 2 \\
-0.01 & 45 (4) & 0.006 (0.0002) & 11 & 3 \\
+0.04 & 0.36 (.02) & 0.002 ($<$.001) & 6 & 2 \\
+0.01 & 45 (4) & 0.006 ($<$.001) & 11 & 3 \\
 0.0025 & 760 (50) & 30 (40) & 16-17 & 6-10 \\
 \hline
 \end{tabular}
 \begin{tabular}{l | c | c | c}
 \hline
 & Lower bound & Total queue &  Max queue \\
-$\lambda$ & evaluations ($\times 10^6$) & insertions ($\times 10^3$) & size ($\times 10^3$) \\
+$\lambda$ ~&~ evaluations ($\times 10^6$) ~&~ insertions ($\times 10^3$) ~&~ size ($\times 10^3$) \\
 \hline
-0.04 & 0.035 (0.002) & 2.2 (0.1) & 0.9 (0.1) \\
-0.01 & 4.3 (0.3) & 230 (20) & 140 (10) \\
+0.04 & 0.035 (.002) & 2.2 (.1) & 0.9 (.1) \\
+0.01 & 4.3 (.3) & 230 (20) & 140 (10) \\
 0.0025 & 65 (4) & 3700 (200) & 1900 (100) \\
 \end{tabular}
 %\vspace{4mm}
@@ -345,7 +346,7 @@ See also Figures~\ref{fig:weapon-reg-execution} and~\ref{fig:queue-weapon-reg}.
 \begin{center}
 % left lower right upper
 \includegraphics[trim={35mm 0mm 35mm 20mm},
-width=0.95\textwidth]{figs/weapon_reg-execution.pdf}
+width=\textwidth]{figs/weapon_reg-execution.pdf}
 \end{center}
 \vspace{-5mm}
 \caption{Example executions of CORELS, for the NYCLU stop-and-frisk dataset (${M = 28}$).
@@ -378,7 +379,7 @@ from the panels to the left, for the three different values of~$\Reg$.
 \begin{center}
 % left lower right upper
 \includegraphics[trim={30mm 0mm 30mm 5mm},
-width=0.95\textwidth]{figs/weapon_reg-queue.pdf}
+width=0.9\textwidth]{figs/weapon_reg-queue.pdf}
 \end{center}
 \vspace{-5mm}
 \caption{Summary of CORELS's logical queue,
@@ -450,9 +451,10 @@ the symmetry-aware map is the crucial optimization for the NYCLU dataset.
 
 %\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
 \begin{table}[t!]
-\begin{centering}
+\centering
+%\begin{centering}
 Per-component performance improvement (ProPublica dataset) \\
-\end{centering}
+%\end{centering}
 \vspace{1mm}
 \begin{tabular}{l | c  r | c | c}
 & Total & Slow- & Time to & Max evaluated~ \\
@@ -517,12 +519,13 @@ See also Figure~\ref{fig:queue}. \\
 \end{table}
 
 \begin{table}[t!]
-\begin{centering}
+\centering
+%\begin{centering}
 Per-component performance improvement (NYCLU stop-and-frisk dataset) \\
-\end{centering}
+%\end{centering}
 \vspace{1mm}
 \begin{tabular}{l | c  r | c | c}
-& Total & Slow- & Time to & Max evaluated~ \\
+& Total & Slow- & Time to & Max evaluated \\
 Algorithm variant & time (min) & down & optimum ($\mu$s) & prefix length \\
 \hline
 CORELS & 0.7 (0.1) & --- & 6.7 (0.1) & 11 \\
